# stream-consumer-task

./: .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  docker-compose.yml
.github/workflows/: build.yml  lint.yml  release.yml
examples/: kafka.rs  rabbitmq.rs
src/: lib.rs
