[dependencies]
futures = "0"
rdkafka = {version = "0", optional = true}
tokio = {version = "1", features = ["macros", "rt", "sync"]}
tracing = "0"

[dev-dependencies]
anyhow = "1"
lapin = "2"
tokio = {version = "1", features = ["full"]}

[features]
kafka = ["dep:rdkafka"]

[package]
authors = ["Guillaume Leroy <pro.guillaume.leroy@gmail.com>"]
categories = ["asynchronous"]
description = "Start asynchronous task in background to consume stream"
documentation = "https://docs.rs/stream-consumer-task"
edition = "2021"
keywords = ["async", "asynchronous", "consumer", "stream", "task"]
license = "MIT"
name = "stream-consumer-task"
repository = "https://github.com/leroyguillaume/stream-consumer-task"
version = "0.1.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
